2007-04-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospfd.c: (ospf_network_match_iface) Comment out
	  COMPATIBILITY_MODE.  Going forward, the ospf "network" command
	  will use a simple test: does the network command prefix
	  contain the connected (destination) prefix of the interface?

2007-04-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_interface.c: (ospf_if_set_multicast) Fix bug: was testing
	  interface passive status improperly in light of the recent
	  'passive-interface default' patch.  Now need to test
	  OSPF_IF_PASSIVE_STATUS(oi) instead of
	  OSPF_IF_PARAM(oi, passive_interface).

2007-03-23 Paul Jakma <paul.jakma@sun.com>

	* ospf_spf.c: (various) Add more debug statements.
	  (ospf_nexthop_calculation) Fix silly regression causing ospfd
	  to fail to calculate paths past networks not attached to root
	  vertex, introduced with bug #330 fixes.

2007-03-14 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_snmp.c: (ospf_snmp_neighbor_state) New function to
	  map internal quagga neighbor states to SNMP standard values.
	  (ospfNbrEntry) Call new ospf_snmp_neighbor_state function.

2007-03-14 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospf_zebra.c: (ospf_zebra_add, ospf_zebra_delete) Fix bug
	  where inet_ntoa was used twice in the same debug message,
	  which doesn't work because there's a single shared buffer
	  for the returned string.  The fix is to use inet_ntop.

2007-02-27 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ospfd.c: (ospf_terminate) Exit immediately if ospf is not
	  actually running (e.g. the config file was empty).  Fixes
	  bug where SIGTERM would not kill ospfd.

2007-02-26 Paul Jakma <paul.jakma@sun.com>

	* ospf_spf.c: Fix regression introduced with bug #330 fix: The
	  cost update added to ospf_spf_add_parent only handled PtP
	  case, differing from same functionality in higher-level
	  ospf_spf_next. Regression diagnosed by Anders Pedersen,